--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 }
 
 img{
-    border-width: 10px; border-style: solid; 
+    border-width: 10px; border-style: solid; width: 300px; height: 250px;
 }
 
 p { 
@@ -20,4 +20,7 @@ ul{
     color:goldenrod; font-style: oblique; font-family: Georgia; font-size: large;
 }
 
+a:hover{
+    color: gold; font-family: Verdana, Geneva, Tahoma, sans-serif; font-style: oblique;
+}
 
